force-app/main/default/objects/Default_Handler__c/Default_Handler__c.object-meta.xml
<CustomObject>
    <label>Default Handler</label>
    <nameField>
        <displayFormat>DH-{00000}</displayFormat>
        <label>Default Handler Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Default Handlers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>