force-app/main/default/objects/Default_Handler__c/fields/Case_Type__c.field-meta.xml
<CustomField>
    <fullName>Case_Type__c</fullName>
    <label>Case Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Case Type 1</fullName>
            </value>
            <value>
                <fullName>Case Type 2</fullName>
            </value>
            <value>
                <fullName>Case Type 3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>