force-app/main/default/objects/Default_Handler__c/fields/Default_Handler__c.field-meta.xml
<CustomField>
    <fullName>Default_Handler__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Default Handler</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Default_Handlers</relationshipName>
    <type>Lookup</type>
</CustomField>