force-app/main/default/objects/Default_Handler__c/fields/Firm_Team__c.field-meta.xml
<CustomField>
    <fullName>Firm_Team__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Firm Team</label>
    <referenceTo>Firm_Team__c</referenceTo>
    <relationshipLabel>Default Handlers</relationshipLabel>
    <relationshipName>Default_Handlers</relationshipName>
    <type>Lookup</type>
</CustomField>